--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,5 @@
-alphashape==1.3.1
 colour==0.1.5
-descartes==1.1.0
-matplotlib==3.5.2
 numpy==1.22.3
-pandas==1.4.3
-Pillow==9.2.0
+Pillow==9.3.0
+PyYAML==6.0
 tqdm==4.64.1
